Using Java 21